# SurVeyor

./: CMakeLists.txt  Dockerfile  README.md  build_htslib.sh  features.py  features_denovo.py  insurveyor.py  random_pos_generator.py  run-classifier.py  run_classifier.py  surveyor.py  surveyor.sh  survindel2.py  train-classifier.py  train_classifier.py
.github/workflows/: docker-image.yml
INSurVeyor/: add_filtering_info.cpp  assemble.h  call_insertions.cpp  clip_consensus_builder.cpp  cluster.h  dc_remapper.cpp  dc_remapper.h  filter.cpp  guided_reference_assemble.h  reads_categorizer.cpp  reference_guided_assembly.h  remapping.h  sam_utils.h  utils.h  vcf_utils.h
SurVIndel2/: add_sr_filtering_info.cpp  clip_consensus_builder.cpp  consensus.h  dp_clusterer.cpp  extend_1sr_consensus.h  hsr.h  merge_identical_calls.cpp  normalise.cpp  reads_categorizer.cpp  remapping.h  sam_utils.h  stat_tests.h  utils.h
demo/: reads.bam.bai  ref.fa  ref.fa.fai  result.txt
libs/: ks-test.h  ssw.c  ssw_cpp.cpp
src/: SegTree.h  add_filtering_info.cpp  assemble.h  call_insertions.cpp  clip_consensus_builder.cpp  clustering_utils.h  concat_vcf.cpp  dc_remapper.h  dp_clusterer.cpp  extend_1sr_consensus.h  find_svs_from_sr_consensuses.cpp  genotype.cpp  genotype.h  genotype_dels.h  genotype_dups.h  genotype_hp_indels.h  genotype_inss.h  genotype_invs.h  hsr_utils.h  insertions_assembler.cpp  merge_identical_calls.cpp  reads_categorizer.cpp  reconcile_vcf_gt.cpp  reference_guided_assembly.h  remapping.h  resolve_incompatible_gts.cpp  sam_utils.h  simd_macros.h  stat_tests.h  sw_utils.h  types.h  utils.h  var_utils.h  vcf_utils.h  write_aux_snps.cpp
utils/: check_duplicate_ids.cpp  cluster.cpp  common.h  compare-del.cpp  compare-ins.cpp  compare.cpp  fill-missing-gt-for-training.py  insertions_to_duplications.cpp  normalise.cpp
